			  - 2006-12-14:  Advertisers weren't able to change their own passwords with regster_globals off - bug #1613935  (Matteo)
			  - 2007-01-04:  Prompt to upgrade wasn't shown if maintenance wasn't correctly running  (Matteo)
			  - 2007-01-04:  Midnight maintenance caould have been skipped when scheduled maintenance wasn't running hourly  (Matteo)


phpAdsNew 2.0.9-pr1
			+ Misc bugfixes
			  - 2006-11-09:  Fixed reports compatibility with recent PHP versions - bug #1593451  (Matteo)
			  - 2006-11-10:  The left menu dropdown to move entities could grow bigger than the menu size  (Matteo)
			  - 2006-11-10:  Added back compatibility with PHP 4.1.x and 4.2.x  (Matteo)


phpAdsNew 2.0.9
			+ Misc changes
			  - 2006-08-21:  Added maintenance task to upgrade the GeoIP database configuration, useful when upgrading the database in place. The feature is enabled only if the config file is writable (Matteo)
			  - 2006-08-21:  Upgraded SWF banner code template to use the new Adobe.com URLs and the new Flash 9 allowScriptAccess param to allow banners opening new windows  (Matteo)
			  - 2006-10-12:  Removed MD5 JS login authentications to allow use of password managers - bug #1571177  (Matteo)
			  - 2006-10-16:  Added warning mail for campaigns expiring on a date, rather than having only warnings for low advies/clicks  (Matteo)
			  - 2006-10-18:  Upgraded the code to use superglobal variables instead of HTTP_*_VARS, increasing compatibility with register_long_arrays disabled  (Matteo)
			  - 2006-10-26:  Revamped the upgrades check adding compatibility with the new Openads Sync service  (Matteo)

			+ Misc bugfixes
			  - 2006-04-12:  Fixed problem with local stored banners not readable by Apache user when using suPHP - bug #1467830  (Matteo)
			  - 2006-04-21:  Fixed problem with GeoIP configuration not correctly loaded under some circumstances - bug #1473612  (Matteo)