@@ -14,6 +14,7 @@ CVS
 			  - 2006-12-14:  Advertisers weren't able to change their own passwords with regster_globals off - bug #1613935  (Matteo)
 			  - 2007-01-04:  Prompt to upgrade wasn't shown if maintenance wasn't correctly running  (Matteo)
 			  - 2007-01-04:  Midnight maintenance caould have been skipped when scheduled maintenance wasn't running hourly  (Matteo)
+			  - 2007-01-05:  Richmedia banners were showed inside DHTML banners only when using Windows - bug #1622422  (Matteo)
 
 
 phpAdsNew 2.0.9-pr1
